# YourSchedule

./: .dockerignore  .env.example  .gitignore  Dockerfile  PROJECT_SPEC.md  README.md  docker-compose.yml  pyproject.toml  pyrightconfig.json  run_docker.bat  run_docker_template_tests.bat  run_docker_tests.bat
src/app/: __init__.py  main.py
src/app/config/: database.py  settings.py
src/app/controllers/: __init__.py  academic_controller.py  auth_controller.py  building_controller.py  calendar_controller.py  curriculum_controller.py  requirement_controller.py  resource_controller.py  room_controller.py  schedule_validation_controller.py  schedule_view_controller.py  scheduler_controller.py  template_controller.py
src/app/domain/: enums.py
src/app/repositories/: __init__.py  academic_repository.py  auth_repository.py  building_repository.py  calendar_repository.py  curriculum_repository.py  requirement_repository.py  resource_repository.py  room_repository.py  schedule_repository.py  template_repository.py
src/app/ui/: __init__.py  (+6 more)
tests/: test_academic_crud.py  test_auth_flow.py  test_avatar_storage.py  test_building_crud.py  test_company_isolation.py  test_company_settings_profile.py  test_curriculum_crud.py  test_day_template_logic.py  test_empty_day_template_service.py  test_greedy_scheduler.py  test_profile_data.py  test_requirement_crud.py  test_resource_crud.py  test_room_crud.py  test_schedule_validation.py  test_schedule_visualization.py  test_template_cards.py  test_template_catalog_filters.py  test_template_controller.py  test_time_block_generator.py
(+142 files in other folders)
