[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "academic-schedule-generator"
version = "0.1.0"
description = "Cross-platform desktop app for academic schedule generation"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "SQLAlchemy>=2.0.32",
    "psycopg[binary]>=3.2.3",
    "python-dotenv>=1.0.1",
    "Pillow>=10.4.0",
    "tzdata>=2024.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
